[package]
name = "otap-df-otlp"
description = "OTLP nodes"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
otap-df-engine = { path = "../engine" }
async-trait = "0.1"
thiserror = { workspace = true }
otap-df-channel = { path = "../channel" }
serde_json = "1.0"
sha2 = "0.10.8"
serde.workspace = true
regex = "1.11.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
serde_json = "1.0"
